# Elegy-copilot

./: .copilot-commit-checks.elegy.json  .copilot-commit-checks.saatools.json  .copilotignore  .dockerignore  .editorconfig  .env.mcp.example  .gitignore  .stylelintrc.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_STRATEGY.md  Cargo.toml  INSTALLATION_GUIDE.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  architecture.md  bash.exe.stackdump  eslint.config.mjs  guidelines.md  instruction-engine.code-workspace  lefthook.yml  package-lock.json  package.json  tmpclaude-dc4c-cwd
.changeset/: config.json
.cli/: README.md  manifest.allowlist.json  manifest.json
.codex/: AGENT.md
.copilot/: commit-checks.json
.devcontainer/: devcontainer.json  start-agent-session.sh
.e3-local/: executive3.db
.elegy/: checks.json  repo-check-config.json  ui-check.json
.githooks/: pre-commit  pre-push
.github/: PLAN.md  PULL_REQUEST_TEMPLATE.md  TROUBLESHOOTING-TEST-HANGS.md  architecture.md  copilot-instructions.md  copilot.instructions.md  failed.tasks.md  raw.tasks.md  tasks.md  warnings.md
.instructions/: tasks.history.md
.instructions-output/: doc-update-summary.md  e3-create-wsui-session.js  remote-audit.jsonl
.scripts/: clean-skill-description-quotes.ps1  fix-skill-descriptions.ps1
RannIA/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  skill-installer-0.0.1.vsix  skill-installer.vsix  tsconfig.json
SkillBuilder/: skill-queue.md
agents/: assistant.agent.md  cleanup.agent.md  docs.agent.md  (+15 more)
copilot-ui/src-tauri/: Cargo.toml  tauri.conf.json
copilot-ui/src-tauri/bootstrap/: index.html
copilot-ui/src-tauri/capabilities/: default.json
copilot-ui/src-tauri/src/: main.rs
elegy-checks/: Cargo.toml  README.md
elegy-checks/.codex-plugin/: plugin.json
elegy-checks/assets/schemas/: binary-release-manifest.schema.json  check-run-result.schema.json  checks-config.schema.json
elegy-checks/skills/check-audit/: SKILL.md
elegy-checks/skills/check-authoring/: SKILL.md
elegy-checks/skills/check-failure-triage/: SKILL.md
elegy-checks/skills/check-running/: SKILL.md
elegy-checks/src/: ci.rs  config.rs  doctor.rs  main.rs  packs.rs  runner.rs  store.rs
native/runtime/: Cargo.toml
native/runtime/migrations/: 001_planning_records_init.sql  002_planning_backfill_runs_init.sql  003_planning_backfill_items_ledger_init.sql  004_planning_compare_receipts_init.sql  005_planning_merge_intents_init.sql  006_planning_merge_idempotency_ledger_init.sql  007_planning_suggestions_init.sql  008_planning_recaps_init.sql  009_planning_workflow_artifacts_init.sql
native/runtime/src/: app.rs  auth.rs  config.rs  config_service.rs  dashboard.rs  db.rs  error.rs  executor.rs  lib.rs  main.rs  persistence.rs  planning_health.rs  policy.rs  projects.rs  remote.rs  response_shape.rs  runtime.rs  sessions.rs  worktree_service.rs
native/runtime/src/orchestrator/: approval.rs  journal.rs  mod.rs  pilot.rs  planning.rs  validation.rs  worktree.rs
native/runtime/src/orchestrator/api/: mod.rs  tests.rs
native/runtime/src/orchestrator/worker/: mod.rs  supervisor.rs  tests.rs
native/runtime/src/routes/: agent.rs  assets.rs  catalog.rs  checks.rs  claude_code.rs  cli_detection.rs  cli_tooling.rs  code_review.rs  codex.rs  config.rs  dashboard.rs  desktop_updater.rs  elegy_db.rs  executor.rs  gateway.rs  git.rs  health.rs  lexicon.rs  lifecycle.rs  lifecycle_full.rs  mod.rs  notes.rs  opencode.rs  planning.rs  planning_live.rs  planning_obsidian.rs  policy.rs  projects.rs  remote.rs  repo_assets.rs  repo_docs.rs  sandboxes.rs  sessions.rs  telemetry.rs  tooling_updates.rs  ui_runtime_overlay.rs  version.rs  workspace.rs
native/runtime/tests/: e2e.rs  orchestrator_adversarial.rs
native/runtime/tests/common/: mod.rs
native/runtime/tests/fixtures/codex-exec/: README.md  codex-spike.mjs
native/runtime/tests/fixtures/opencode-acp/: README.md  acp-spike.mjs
native/runtime/tests/fixtures/worker-adapters/: README.md  fake-codex.js  fake-opencode-acp.js
(+3771 files in other folders)
