[workspace]
members = [
  "native/contracts",
  "native/runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10.9"
tempfile = "3"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
