[package]
name = "elegy-checks"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local check registry, runner, and evidence store for Elegy Copilot."

[[bin]]
name = "elegy-checks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
sha2 = "0.10.8"

[dev-dependencies]
tempfile = "3.15.0"
