[package]
name = "elegy-copilot-tauri-shell"
version = "1.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
open = "5.3.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-single-instance = "2.4.1"
url = "2.5.4"
