[package]
name = "elegy-native-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dirs.workspace = true
elegy-native-contracts = { path = "../contracts" }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http.workspace = true
tokio.workspace = true
tower.workspace = true
