[package]
name = "elegy-native-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
blake3.workspace = true
chrono.workspace = true
dirs.workspace = true
glob.workspace = true
elegy-native-contracts = { path = "../contracts" }
hex.workspace = true
hmac.workspace = true
http.workspace = true
libc.workspace = true
rand.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
regex.workspace = true
thiserror = "2"

[[bin]]
name = "elegy-native-runtime"
path = "src/main.rs"

[dev-dependencies]
http.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
